# egras

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  egras.md
.claude/: settings.json
.githooks/: pre-push
.github/workflows/: ci.yml
clients/python/: .gitignore  README.md  pyproject.toml
clients/python/egras_client/: __init__.py  client.py  errors.py  helpers.py  models.py
clients/python/egras_client/api/: __init__.py  _base.py  echo.py  features.py  security.py  tenants.py  users.py
clients/python/scripts/: check_drift.py  regen.py
clients/python/tests/: test_client.py
docs/: icm-memory-system.md  openapi.json
knowledge/specs/: 2026-04-18-egras-rust-seed-design.md
knowledge/wiki/: Architecture.md  Audit-System.md  Authentication.md  Authorization.md  CI-and-Deployment.md  Configuration.md  Data-Model.md  Home.md  (+14 more)
migrations/: 0002_tenants.sql  0003_security.sql  0004_rbac.sql  0005_seed_operator_and_rbac.sql  0006_audit.sql  0007_revoked_tokens.sql  0008_inbound_channels.sql  0009_jobs.sql  0010_outbox_events.sql  0011_service_accounts.sql  0012_features.sql  0013_echo_permission.sql  0014_grant_echo_to_org_roles.sql
notebooks/: README.md  conftest.py  requirements.txt
src/: app_state.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  openapi.rs  pagination.rs  testing.rs
tests/: audit_list_events_test.rs  audit_model_test.rs  audit_persistence_test.rs  audit_recorder_test.rs  audit_worker_test.rs  auth_jwt_test.rs  auth_middleware_test.rs  bootstrap_seed_admin_test.rs  config_test.rs  errors_test.rs  health_test.rs  jobs_persistence_test.rs  jobs_runner_test.rs  security_http_auth_flows_test.rs  security_http_list_users_test.rs  security_http_login_test.rs  security_http_password_reset_test.rs  security_http_register_test.rs  security_persistence_test.rs  security_service_auth_flows_test.rs  security_service_list_users_test.rs  security_service_login_test.rs  security_service_password_reset_test.rs  security_service_register_test.rs  tenants_http_add_remove_user_test.rs  tenants_http_assign_role_test.rs  tenants_http_channels_test.rs  tenants_http_create_organisation_test.rs  tenants_http_list_my_organisations_test.rs  tenants_http_list_organisation_members_test.rs  tenants_persistence_channels_test.rs  tenants_persistence_test.rs  tenants_service_add_remove_user_test.rs  tenants_service_assign_role_test.rs  tenants_service_channels_test.rs  tenants_service_create_organisation_test.rs  tenants_service_list_my_organisations_test.rs  tenants_service_list_organisation_members_test.rs
web/: .gitignore  index.html  package-lock.json  package.json
(+222 files in other folders)
