[package]
name = "egras"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Enterprise-ready Rust application seed (egras)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "egras"
path = "src/main.rs"

[features]
testing = ["dep:testcontainers", "dep:testcontainers-modules"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors", "request-id", "util"] }
hyper = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros", "migrate", "ipnetwork"] }
ipnetwork = "0.20"
validator = { version = "0.18", features = ["derive"] }
argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["env", "toml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
testcontainers = { version = "0.20", optional = true }
testcontainers-modules = { version = "0.8", features = ["postgres"], optional = true }

[dev-dependencies]
egras = { path = ".", features = ["testing"] }
mockall = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-test = "0.4"
pretty_assertions = "1"
serial_test = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
