[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "egras-client"
version = "0.1.0"
description = "Python client for the egras REST API."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "egras maintainers" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
]

[project.optional-dependencies]
# Dev tools required for `python scripts/regen.py` and `python scripts/check_drift.py`.
# Pin loosely; pinned tightly in CI via lock if needed.
dev = [
    "datamodel-code-generator[http]>=0.25,<1.0",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["egras_client*"]
